Design QA - Jumbotron Remove padding-left on mobile, fix line break

--- a/_assets/stylesheets/components/_jumbotron.scss
+++ b/_assets/stylesheets/components/_jumbotron.scss
@@ -7,6 +7,14 @@
     font-size: 4.5rem;
     line-height: 5rem;
   }
+
+  .col-10 {
+    padding-left: 0;
+
+    @include media-breakpoint-up(md) {
+      padding-left: 15px;
+    }
+  }
 }
 
 .padded-header {
@@ -27,9 +35,15 @@
   .tpl-blog &,
   .tpl-post & {
     text-align: left;
+
+    span {
+      display: inline;
+      box-decoration-break: clone;
+      -webkit-box-decoration-break: clone;
+    }
   }
 
-  & span {
+  span {
     line-height: 1;
     background-color: $red;
     padding: 0 1rem .5rem;
